Revision history for WWW-LinkChecker-Internal

0.0.4   Unknown
    * Add t/style-trailing-space.t .

0.0.3   2012-08-30
    * Add the --pre-skip and --before-insert-skip flags.
    * A memory/speed optimisation.

0.0.2   2012-08-29
    * Add missing dependencies to Makefile.PL.

0.0.1   2012-08-29
        First version, released on an unsuspecting world.
