@@ -5,6 +5,10 @@ use Module::Build;
 
 my $builder = Module::Build->new(
     module_name         => 'WWW::LinkChecker::Internal',
+    configure_requires =>
+    {
+        'Module::Build' => '0.36',
+    },
     license             => 'mit',
     dist_author         => q{Shlomi Fish <shlomif@cpan.org>},
     dist_version_from   => 'lib/WWW/LinkChecker/Internal.pm',
@@ -24,6 +28,24 @@ my $builder = Module::Build->new(
     [
         'scripts/link-checker',
     ],
+    meta_merge =>
+    {
+        resources =>
+        {
+            repository => "http://bitbucket.org/shlomif/perl-www-linkchecker-internal",
+        },
+        keywords =>
+        [
+            "checker",
+            "html",
+            "link-checker",
+            "internal",
+            "link",
+            "links",
+            "website",
+            "www",
+        ],
+    },
 );
 
 $builder->create_build_script();
